; ModuleID = '/home/carl/AnghaBench/rufus/src/ext2fs/extr_inode.c_extent_head_looks_insane.c'
source_filename = "/home/carl/AnghaBench/rufus/src/ext2fs/extr_inode.c_extent_head_looks_insane.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ext2_inode_large = type { i32, i32 }

@EXT4_EXTENTS_FL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ext2_inode_large*)* @extent_head_looks_insane to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @extent_head_looks_insane(%struct.ext2_inode_large* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ext2_inode_large*, align 8
  store %struct.ext2_inode_large* %0, %struct.ext2_inode_large** %3, align 8
  %4 = load %struct.ext2_inode_large*, %struct.ext2_inode_large** %3, align 8
  %5 = getelementptr inbounds %struct.ext2_inode_large, %struct.ext2_inode_large* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @EXT4_EXTENTS_FL, align 4
  %8 = and i32 %6, %7
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %16

10:                                               ; preds = %1
  %11 = load %struct.ext2_inode_large*, %struct.ext2_inode_large** %3, align 8
  %12 = getelementptr inbounds %struct.ext2_inode_large, %struct.ext2_inode_large* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = call i64 @ext2fs_extent_header_verify(i32 %13, i32 4)
  %15 = icmp eq i64 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %10, %1
  store i32 0, i32* %2, align 4
  br label %18

17:                                               ; preds = %10
  store i32 1, i32* %2, align 4
  br label %18

18:                                               ; preds = %17, %16
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i64 @ext2fs_extent_header_verify(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
